src/main/java/com/example/be_a/global/error/FieldErrorDetail.java
package com.example.be_a.global.error;

public record FieldErrorDetail(String field, String reason) {
}
